--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tushar Sarkar</title>
+  <link rel="icon" href="/public/content/Logo.png" type="image/png">
+
   <link rel="shortcut icon" href="/public/content/favicon.webp" type="image/x-icon">
 
   <!-- AnimateCSS -->
