--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
                       
                       <br>
                       <p class="problem-info">
-                        <b>Handle:  <span style="color: rgb(7, 144, 43); font-size: 1.2em;" >Tushar35</span></b>
+                        <b>Handle:  <span style="color: rgb(8, 199, 225); font-size: 1.2em;" >Tushar35</span></b>
                       </p>
 
                       <div class="row pt-2">
@@ -1089,7 +1089,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Title: Pupil
+                            Title: Specialist
                           </p>
                         </div>
                       </div>
