--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
                       
                       <br>
                       <p class="problem-info">
-                        <b>Handle:  <span style="color: rgb(8, 199, 225); font-size: 1.2em;" >Tushar35</span></b>
+                        <b>Handle:  <span style="color: rgb(13, 179, 82); font-size: 1.2em;" >Tushar35</span></b>
                       </p>
 
                       <div class="row pt-2">
@@ -1084,12 +1084,12 @@
                       <div class="row pt-2">
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Max Rating: 1338 
+                            Max Rating: 1340 
                           </p>
                         </div>
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Title: Specialist
+                            Title: Pupil
                           </p>
                         </div>
                       </div>
