--- a/index.html
+++ b/index.html
@@ -1476,13 +1476,13 @@
                   <div class="certificate-links">
                     <span class="date-badge-u" >
                       My Certificate
-                      <a href="#" class="certificate-link">
+                      <a href="https://drive.google.com/file/d/1zUnNanPyXS6p84fisP2SDIq53n_38WjB/view?usp=drive_link" class="certificate-link">
                         <i class="fas fa-link"></i>
                       </a>
                     </span>
                     <span class="date-badge-u">
                       TM Certificate
-                      <a href="#" class="certificate-link">
+                      <a href="https://drive.google.com/file/d/1zUnNanPyXS6p84fisP2SDIq53n_38WjB/view?usp=drive_link" class="certificate-link">
                         <i class="fas fa-link"></i>
                       </a>
                     </span>
@@ -1741,14 +1741,8 @@
                     </div>
                     <div class="certificate-links">
                       <span class="date-badge-u" >
-                        My Certificate
-                        <a href="#" class="certificate-link">
-                          <i class="fas fa-link"></i>
-                        </a>
-                      </span>
-                      <span class="date-badge-u">
-                        TM Certificate
-                        <a href="#" class="certificate-link">
+                        Certificate
+                        <a href="https://drive.google.com/file/d/1zUnNanPyXS6p84fisP2SDIq53n_38WjB/view?usp=drive_link" class="certificate-link">
                           <i class="fas fa-link"></i>
                         </a>
                       </span>
@@ -1807,7 +1801,6 @@
                                   </span>
                                 </a>
                               </li>
-
                           </ul>
                       </div>
                     </div>
@@ -1895,7 +1888,7 @@
                               </li>
                               
                               <li>Coach: Md. Martuza Ahamad Sir
-                                <a href="https://www.linkedin.com/in/martuza-ahamad/" target="_blank" class="linkedin-icon">
+                                <a href="https://drive.google.com/file/d/1D0Uqi0U4E1a_K2PFoVlLWWfw3epVRCPB/view?usp=drive_link" target="_blank" class="linkedin-icon">
                                   <span 
                                     class="iconify" data-icon="logos:linkedin-icon">
                                   </span>
@@ -1905,6 +1898,14 @@
                           </ul>
                       </div>
                     </div>
+                    <div class="certificate-links">
+                      <span class="date-badge-u" >
+                        Certificate
+                        <a href="https://drive.google.com/file/d/1D0Uqi0U4E1a_K2PFoVlLWWfw3epVRCPB/view?usp=drive_link" class="certificate-link">
+                          <i class="fas fa-link"></i>
+                        </a>
+                      </span>
+                    </div>
                 </span>
               </li>
 
@@ -1912,7 +1913,7 @@
               <li class="achievement-li">
                 <span class="achievement-div-sub-heading">UGV 1st ICT Carnival programming contest 2019</span>
                 <span class="achievement-div-content">
-                    <p class="mb-0">Team Name: BSMRSTU_break</p>
+                    <p class="mb-0">Team Name: BSMRSTU_Lazy(3)</p>
                     <p class="mb-0">Rank: 20th</p>
                     <div class="member-section">
                       <h4 class="member-heading">Members</h4>
@@ -1953,7 +1954,15 @@
                           </ul>
                       </div>
                     </div>
-                </span>
+                    <div class="certificate-links">
+                      <span class="date-badge-u" >
+                        Certificate
+                        <a href="https://drive.google.com/file/d/1dk9rmBcTP2Jt0hxHY6FpltUFmkCTA85p/view?usp=drive_link" class="certificate-link">
+                          <i class="fas fa-link"></i>
+                        </a>
+                      </span>
+                    </div>
+                  </span>
               </li>
 
             </ul>
