intermediate certificate add

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                   </span>
                 </span>
               </li>
-              
+
               <li class="resume-li">
                 <span class="resume-div-sub-heading">Introduction to Python</span>
                 <span class="resume-div-content">
@@ -946,7 +946,6 @@
                     </a>
                   </span>
                 </span>
-
               </li>
 
               <li class="resume-li">
@@ -987,6 +986,24 @@
               </li>
 
               <li class="resume-li">
+                <span class="resume-div-sub-heading">SQL Advanced</span>
+
+                <span class="resume-div-content">
+                  <p class="mb-1">Issued by Hackerrank</p>
+                  <span class="date-badge">
+                    Aug 2024
+                  </span>
+
+                  <span class="date-badge" style="margin-left: 40px; color: white;">
+                    Show Certificate
+                    <a href="https://www.hackerrank.com/certificates/0fa79fdb2b2c" style="color: white; margin-left: 5px;">
+                      <i class="fas fa-link"></i>
+                    </a>
+                  </span>
+                </span>
+
+              </li>
+              <li class="resume-li"></li>
                 <span class="resume-div-sub-heading">SQL Advanced</span>
 
                 <span class="resume-div-content">
