Intermediate problem solving finally added

--- a/index.html
+++ b/index.html
@@ -908,20 +908,15 @@
         <div class="row d-flex justify-content-center m-0">
           <div class="resume" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-div-heading d-flex align-items-center">
-              <span class="iconify resume-div-heading-icon"
-                data-icon="fluent:certificate-20-filled"></span>Certifications
+              <span class="iconify resume-div-heading-icon" data-icon="fluent:certificate-20-filled"></span>
+              Certifications
             </h3>
             <ul>
-
               <li class="resume-li">
                 <span class="resume-div-sub-heading">Problem Solving (Basic)</span>
-
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Hackerrank</p>
-                  <span class="date-badge">
-                    Aug 2022
-                  </span>
-
+                  <span class="date-badge">Aug 2022</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
                     <a href="https://www.hackerrank.com/certificates/8020f9ec6018" style="color: white; margin-left: 5px;">
@@ -930,15 +925,11 @@
                   </span>
                 </span>
               </li>
-
               <li class="resume-li">
                 <span class="resume-div-sub-heading">Introduction to Python</span>
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Analytical Vidhya</p>
-                  <span class="date-badge">
-                    Nov 2023
-                  </span>
-
+                  <span class="date-badge">Nov 2023</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
                     <a href="https://courses.analyticsvidhya.com/certificates/lmbngdyimz" style="color: white; margin-left: 5px;">
@@ -947,15 +938,11 @@
                   </span>
                 </span>
               </li>
-
               <li class="resume-li">
                 <span class="resume-div-sub-heading">SQL Basic</span>
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Hackerrank</p>
-                  <span class="date-badge">
-                    Aug 2024
-                  </span>
-
+                  <span class="date-badge">Aug 2024</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
                     <a href="https://www.hackerrank.com/certificates/828d30ff9fc3" style="color: white; margin-left: 5px;">
@@ -963,18 +950,12 @@
                     </a>
                   </span>
                 </span>
-
               </li>
-
               <li class="resume-li">
                 <span class="resume-div-sub-heading">SQL Intermediate</span>
-
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Hackerrank</p>
-                  <span class="date-badge">
-                    Aug 2024
-                  </span>
-
+                  <span class="date-badge">Aug 2024</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
                     <a href="https://www.hackerrank.com/certificates/3540cae1f60b" style="color: white; margin-left: 5px;">
@@ -982,18 +963,12 @@
                     </a>
                   </span>
                 </span>
-
               </li>
-
               <li class="resume-li">
                 <span class="resume-div-sub-heading">SQL Advanced</span>
-
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Hackerrank</p>
-                  <span class="date-badge">
-                    Aug 2024
-                  </span>
-
+                  <span class="date-badge">Aug 2024</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
                     <a href="https://www.hackerrank.com/certificates/0fa79fdb2b2c" style="color: white; margin-left: 5px;">
@@ -1001,30 +976,24 @@
                     </a>
                   </span>
                 </span>
-
               </li>
-              <li class="resume-li"></li>
-                <span class="resume-div-sub-heading">SQL Advanced</span>
-
+              <li class="resume-li">
+                <span class="resume-div-sub-heading">Problem Solving (Intermediate)</span>
                 <span class="resume-div-content">
                   <p class="mb-1">Issued by Hackerrank</p>
-                  <span class="date-badge">
-                    Aug 2024
-                  </span>
-
+                  <span class="date-badge">Aug 2024</span>
                   <span class="date-badge" style="margin-left: 40px; color: white;">
                     Show Certificate
-                    <a href="https://www.hackerrank.com/certificates/0fa79fdb2b2c" style="color: white; margin-left: 5px;">
+                    <a href="https://www.hackerrank.com/certificates/23b689f52c13" style="color: white; margin-left: 5px;">
                       <i class="fas fa-link"></i>
                     </a>
                   </span>
                 </span>
-
               </li>
-
             </ul>
           </div>
         </div>
+        
 
       </div>
 
