--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <h4 class="skills-heading">Backend</h4>
             <div class="row d-flex justify-content-center align-items-center">
 
-              <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
+              <!-- <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
                 aria-label="NodeJS" data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="background-color: white;"
                   data-icon="logos:nodejs-icon"></span>
@@ -463,7 +463,8 @@
                 aria-label=".NET" data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="background-color: white;" 
                   data-icon="simple-icons:dotnet"></span>
-              </div>
+              </div> -->
+              <p>Running</p>
 
             </div>
           </div>
@@ -477,10 +478,10 @@
             <h4 class="skills-heading">Cloud</h4>
 
             <div class="row d-flex justify-content-center align-items-center">
-              <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center" aria-label="AWS"
+              <!-- <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center" aria-label="AWS"
                 data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="background-color: white;" data-icon="logos:aws"></span>
-              </div>
+              </div> -->
 
               <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
                 aria-label="Netlify" data-balloon-pos="up">
@@ -506,11 +507,11 @@
             <h4 class="skills-heading">Databases</h4>
 
             <div class="row d-flex justify-content-center align-items-center">
-              <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
+              <!-- <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
                 aria-label="MongoDB" data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="color: #409c39; background-color: white;"
                   data-icon="simple-icons:mongodb"></span>
-              </div>
+              </div> -->
 
               <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center" aria-label="mySQL"
                 data-balloon-pos="up">
