--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                       
                       <br>
                       <p class="problem-info">
-                        <b>Handle:  <span style="color: rgb(13, 179, 82); font-size: 1.2em;" >Tushar35</span></b>
+                        <b>Handle:  <span style="color: rgb(51, 212, 240); font-size: 1.2em;" >Tushar35</span></b>
                       </p>
 
                       <div class="row pt-2">
@@ -1063,7 +1063,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Contest: 190+ 
+                            Contest: 195+ 
                           </p>
                         </div>
                       </div>
@@ -1071,12 +1071,12 @@
                       <div class="row pt-2">
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Max Rating: 1340 
+                            Max Rating: 1446 
                           </p>
                         </div>
                         <div class="col-md-6 col-sm-12">
                           <p class="problem-info">
-                            Title: Pupil
+                            Title: Specialist
                           </p>
                         </div>
                       </div>
