software engineer tittle add and some change its respective

--- a/index.html
+++ b/index.html
@@ -109,17 +109,11 @@
             class="col-4 p-0 home-cols d-flex align-items-end justify-content-start animate__animated animate__slideInUp">
             <img class="side-img side-img-left" data-tilt src="/public/content/coding-left.webp" alt="Left side image">
           </div>
-          <div class="col-4 p-0 home-cols d-flex align-items-center justify-content-center">
-            <div class="row">
-              <div
-                class="col-12 p-0 home-cols d-flex align-items-end justify-content-center animate__animated animate__zoomInDown animate__delay-1s">
-                <h1 class="home-heading mb-0 text-center">Tushar Sarkar</h1>
-              </div>
-              <div
-                class="col-12 p-0 home-cols home-info-div d-flex align-items-start justify-content-center animate__animated animate__zoomInUp animate__delay-2s">
-                <h2 class="home-info mb-0 text-center">Competitive Programmer</h1>
-              </div>
-            </div>
+          <div class="col-12 p-0 home-cols d-flex align-items-end justify-content-center animate__animated animate__zoomInDown animate__delay-1s">
+            <h1 class="home-heading mb-0 text-center">
+              Tushar Sarkar <br>
+              <span class="home-info">Software Engineer | Competitive Programmer</span>
+            </h1>
           </div>
           <div
             class="col-4 p-0 home-cols d-flex align-items-start justify-content-end  animate__animated animate__slideInDown">
@@ -179,7 +173,7 @@
           <p class="about-info">
             Hello, I'm Tushar Sarkar, a recent graduate with a B.Sc in Engineering in <span>Computer Science and Engineering</span> 
             from Bangabandhu Sheikh Mujibur Rahman Science and Technology University (BSMRSTU). 
-            I'm a <span>Competitive Programmer</span> with a deep passion for <span>Software Engineering</span> and <span>Web Development</span>.
+            I'm a <span>Software Engineer</span> with a background in <span>Competitive Programming</span> and a passion for <span>Web Development</span>.
             I thrive in collaborative environments and enjoy working on complex problems that challenge my skills. 
             My experience spans various programming languages and technologies, and I'm always eager to learn and adapt. 
             In my free time, I practice <span>problem-solving</span> and <span>typing skills</span>, and I find great joy in tackling new technical challenges.
@@ -453,18 +447,18 @@
             <h4 class="skills-heading">Backend</h4>
             <div class="row d-flex justify-content-center align-items-center">
 
-              <!-- <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
-                aria-label="NodeJS" data-balloon-pos="up">
+              <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
+                aria-label="Laravel" data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="background-color: white;"
-                  data-icon="logos:nodejs-icon"></span>
+                  data-icon="logos:laravel"></span>
               </div>
 
               <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
                 aria-label=".NET" data-balloon-pos="up">
                 <span class="iconify skills-icon p-1" style="background-color: white;" 
                   data-icon="simple-icons:dotnet"></span>
-              </div> -->
-              <p>Running</p>
+              </div> 
+              <!-- <p>Running</p> -->
 
             </div>
           </div>
@@ -507,11 +501,11 @@
             <h4 class="skills-heading">Databases</h4>
 
             <div class="row d-flex justify-content-center align-items-center">
-              <!-- <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
-                aria-label="MongoDB" data-balloon-pos="up">
-                <span class="iconify skills-icon p-1" style="color: #409c39; background-color: white;"
-                  data-icon="simple-icons:mongodb"></span>
-              </div> -->
+              <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center"
+                aria-label="MySQL Workbench" data-balloon-pos="up">
+                <span class="iconify skills-icon p-1" style="color: #4479A1; background-color: white;"
+                  data-icon="simple-icons:mysql"></span>
+              </div>
 
               <div class="col-3 m-2 skills-logo p-0 d-flex justify-content-center align-items-center" aria-label="mySQL"
                 data-balloon-pos="up">
